fixed spacing in prod campaing page

--- a/public/css/override.css
+++ b/public/css/override.css
@@ -129,6 +129,6 @@ ul.list-things li {
     float: left;
     margin-right: 35px;
     width:auto;
-    height:455px;
+    height:auto;
     margin-bottom: 40px;
 }
